[package]
name = "gauth-generator"
version = "0.1.0"
authors = ["Jakub Koralewski <jakkor8@st.amu.edu.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-authenticator = {version= "0.2.1", features=["with-qrcode"]}
quicli = "0.4"
structopt = "0.3"
anyhow = "1.0"
